[gd_scene load_steps=7 format=3 uid="uid://cg3ux1fyx2vml"]

[ext_resource type="Script" uid="uid://r5i3tpwq0pf8" path="res://Scenes/ufo.gd" id="1_ppr3x"]
[ext_resource type="Texture2D" uid="uid://bc00k8t2lcr6x" path="res://Assets/Sprites/ufo.png" id="1_xosc4"]
[ext_resource type="PackedScene" uid="uid://dmk0red35u8ly" path="res://Scenes/bullet.tscn" id="2_l1ch6"]
[ext_resource type="PackedScene" uid="uid://cvmm0u2wqtomr" path="res://Scenes/explosion_particles.tscn" id="3_l1ch6"]
[ext_resource type="AudioStream" uid="uid://j0lf14see63w" path="res://Assets/Audio/ufo_shot.ogg" id="5_l0lff"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3ue4y"]
radius = 8.3
height = 60.0

[node name="UFO" type="Area2D"]
rotation = 3.1415927
collision_layer = 8
collision_mask = 7
script = ExtResource("1_ppr3x")
bullet_scene = ExtResource("2_l1ch6")

[node name="ShootingTimer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_xosc4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_3ue4y")

[node name="ExplosionParticles" parent="." instance=ExtResource("3_l1ch6")]

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="UfoShotAudioPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_l0lff")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
